# QT-stackview-loader

./: CMakeLists.txt  Main.qml  NewPage.qml  main.cpp
